--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Ctext y='48' x='8' font-size='48'%3E%F0%9F%92%BC%3C/text%3E%3C/svg%3E">
   
-  <title>Wedlify Jobs • Find Your Next Opportunity</title>
+  <title>Evenza Jobs • Find Your Next Opportunity</title>
   <meta name="description" content="Wedlify Jobs — Find part-time jobs for students near you.">
   <meta name="theme-color" content="#C7A008">
   <meta property="og:title" content="Wedlify Jobs">
